added favicon and contact me sheet

--- a/style.css
+++ b/style.css
@@ -145,3 +145,11 @@ a {
 .WeatherAPI-Finder {
     display: flex;
 }
+
+/* Contact Me page */
+
+.contact-me-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
