--- a/style2.css
+++ b/style2.css
@@ -12,6 +12,8 @@ body {
     background: gray;
     border: 3px solid black;
     border-radius: 30px;
+    color: white;
+    box-shadow: ;
 }
 
 /* NAV */
