--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ a {
     align-items: center;
     font-family: 'Courgette', cursive;
     letter-spacing: 1px;
-    margin-top: 6px;
+    margin-top: 30px;
 }
 
 .circular {
@@ -105,6 +105,10 @@ a {
     margin: 0px 10px;
 }
 
+.socials a {
+    color: black;
+}
+
 .fa-github:hover {
     color: #7DBBE6;
 }
@@ -115,7 +119,7 @@ a {
 
 /* MOCK PROJECTS */
 
-.mock-projects-body {
+#mock-projects-body {
     width: 100%;
     display: flex;
     justify-content: center;
