--- a/style.css
+++ b/style.css
@@ -272,6 +272,11 @@ a {
     .cover-text {
         font-size: .5rem;
     }
+
+    ul li {
+        font-size: .6rem;
+        margin: 0px 1px;
+    }
 }
 
 @media screen and (max-width: 565px){
