--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 body {
     margin: 0;
+    background: #FFF8DC;
 }
 
 /* NAV */
@@ -68,7 +69,7 @@ a {
 
 .cover-content {
     height: 100%;
-    width: 48%;
+    width: 54%;
     display: flex;
     justify-content: space-between;
     border: 2px gray solid;
@@ -129,7 +130,7 @@ a {
 }
 
 .mock-websites {
-    width: 48%;
+    width: 40%;
     padding: 10px;
     border: 2px black solid;
     border-radius: 20px;
