--- a/style.css
+++ b/style.css
@@ -96,6 +96,32 @@ a {
     margin-top: 30px;
 }
 
+.cover-text h4 {
+    font-size: 2rem;;
+}
+
+.cover-text h3 {
+    overflow: hidden;
+    border-right: .15em solid black;
+    white-space: nowrap;
+    margin: 5 auto;
+    animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+/* Typing Effect */
+@keyframes typing {
+    from { width: 0 }
+    to { width: 78% }
+}
+
+/* Typewriter cursor effect */
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: black; }
+}
+
 .circular {
     border-radius: 50%;
     width: auto;
