--- a/style.css
+++ b/style.css
@@ -96,8 +96,8 @@ a {
     margin-top: 30px;
 }
 
-.cover-text h4 {
-    font-size: 1.9rem;;
+.cover-text h2 {
+    font-size: 1.9rem;
 }
 
 .cover-text h3 {
@@ -105,6 +105,7 @@ a {
     border-right: .15em solid black;
     white-space: nowrap;
     margin: 5 auto;
+    font-size: 1.1rem;
     animation: 
     typing 3.5s steps(40, end),
     blink-caret .75s step-end infinite;
@@ -249,6 +250,12 @@ a {
     #mock-projects-body {
         font-size: .8rem;;
     }
+
+    @keyframes typing {
+        from { width: 0 }
+        to { width: 93% }
+    }
+
 }
 
 @media screen and (max-width: 1230px){
@@ -260,8 +267,51 @@ a {
         height: 40vh;
     }
 
-    .cover-text {
-        font-size: .7rem;
+    .cover-text h3 {
+        font-size: 1rem;
+    }
+
+    .cover-text h2 {
+        font-size: 1.5rem;
+    }
+
+    @keyframes typing {
+        from { width: 0 }
+        to { width: 96% }
+    }
+}
+
+@media screen and (max-width: 1130px){
+    .cover-content {
+        width: 60%;
+    }
+
+    .cover-text h3 {
+        font-size: .8rem;
+    }
+
+    .cover-text h2 {
+        font-size: 1.1rem;
+    }
+
+    @keyframes typing {
+        from { width: 0 }
+        to { width: 96% }
+    }
+}
+
+@media screen and (max-width: 950px){
+    .cover-text h3 {
+        font-size: .73rem;
+    }
+
+    .cover-text h2 {
+        font-size: 1rem;
+    }
+
+    @keyframes typing {
+        from { width: 0 }
+        to { width: 96% }
     }
 }
 
@@ -274,8 +324,17 @@ a {
         height: 35vh;
     }
 
-    .cover-text {
-        font-size: .6rem;
+    .cover-text h3 {
+        font-size: .61rem;
+    }
+
+    .cover-text h2 {
+        font-size: .81rem;
+    }
+
+    @keyframes typing {
+        from { width: 0 }
+        to { width: 93% }
     }
 
     .contactMe {
@@ -302,8 +361,17 @@ a {
         height: 35vh;
     }
 
-    .cover-text {
+    .cover-text h3 {
         font-size: .5rem;
+    }
+
+    .cover-text h2 {
+        font-size: .65rem;
+    }
+
+    @keyframes typing {
+        from { width: 0 }
+        to { width: 96% }
     }
 
     ul li {
@@ -317,12 +385,55 @@ a {
     }
 }
 
+@media screen and (max-width: 605px){
+.cover-text h3 {
+    font-size: .5rem;
+}
+
+.cover-text h2 {
+    font-size: .65rem;
+}
+
+@keyframes typing {
+    from { width: 0 }
+    to { width: 96% }
+}
+}
+
 @media screen and (max-width: 565px){
     .circular {
         height: 75px;
     }
 
-    .cover-text {
-        font-size: .5rem;
+    .cover-text h3 {
+        font-size: .45rem;
+    }
+
+    .cover-text h2 {
+        font-size: .60rem;
+    }
+
+    @keyframes typing {
+        from { width: 0 }
+        to { width: 96% }
+    }
+}
+
+@media screen and (max-width: 565px){
+    .cover-content {
+        width: 65%;
+    }
+    
+    .cover-text h3 {
+        font-size: .40rem;
+    }
+
+    .cover-text h2 {
+        font-size: .48rem;
+    }
+
+    @keyframes typing {
+        from { width: 0 }
+        to { width: 100% }
     }
 }
