--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ a {
     border-right: .15em solid black;
     white-space: nowrap;
     margin: 5 auto;
-    font-size: .4rem;
+    font-size: 1.1rem;
     animation: 
     typing 3.5s steps(40, end),
     blink-caret .75s step-end infinite;
@@ -414,7 +414,7 @@ a {
     }
 
     .cover-text h3 {
-        font-size: .45rem;
+        font-size: .35rem;
     }
 
     .cover-text h2 {
@@ -433,7 +433,7 @@ a {
     }
     
     .cover-text h3 {
-        font-size: .05rem;
+        font-size: .25rem;
     }
 
     .cover-text h2 {
