--- a/style.css
+++ b/style.css
@@ -448,11 +448,12 @@ a {
 
 @media screen and (max-width: 400px){
     .cover-content {
-        width: 95%;
+        width: 75%;
     }
     
     .cover-text h3 {
         font-size: .15rem;
+        white-space: wrap;
     }
 
     .cover-text h2 {
